--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite Three</title>
+    <title>3D Crystal</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
